# propreact

./: CMakeLists.txt  README.md
include/: Arbiter.h  Communicator.h  CuptiProfiler.h  GlobalWindow.h  Interposer.h  InterposerBackend.h  Predictor.h  RequestPool.h  Trigger.h  Window.h  Xrush.h
src/: Arbiter.cpp  BackendDriver.cpp  Communicator.cpp  CuptiProfiler.cpp  GlobalWindow.cpp  Interposer.cpp  InterposerBackend.cpp  Predictor.cpp  RequestPool.cpp  Trigger.cpp  Window.cpp  Xrush.cpp
